# vina-doctor-mcp

./: .gitignore  BUILDING_INSTRUCTION_v3.md  README.md  todo.md
mcp_server/: .env.example  Dockerfile  __init__.py  __main__.py  ai_engine_client.py  config.py  fhir_client.py  pyproject.toml  server.py  sharp.py
mcp_server/tests/: conftest.py  test_fhir_client.py  test_phase4_tools.py  test_ping.py  test_sharp.py  test_tools.py
mcp_server/tools/: analyze_transcript.py  generate_soap_report.py  get_consultation_status.py  process_audio_url.py  suggest_icd10.py  summarize_for_patient.py
reference/ai_engine/agents/: extractor.py  prompts.py
reference/docs/: FHIR_HIPAA_USA_and_GDPR_EU.md  ai_engine_with_icd_10.md  ai_model.md  clinical_documentation_and_medical_scribe.md  crewai-agent-system-healthcare.md  sample_json_output.json  trigger-dev-long-running-tasks.md
